--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/forms.css
@@ -8,6 +8,10 @@
 
     .form-container.wide {
         max-width: 900px; 
+    } 
+    
+    .form-container.extra-wide {
+        max-width: 1200px; 
     }
 
 .validation-message {
