--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/app.css
@@ -7,6 +7,7 @@
 @import url('layout.css');
 @import url('loading.css');
 @import url('navbar.css');
+@import url('predictions.css');
 @import url('tables.css');
 
 :root {
