--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/List.razor
@@ -5,7 +5,6 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
-@using Microsoft.AspNetCore.Authorization
 @using PredictionLeague.Shared.Admin.Rounds
 
 <PageTitle>Manage Rounds</PageTitle>
@@ -46,6 +45,8 @@
                             <td data-label="Matches">@round.MatchCount</td>
                             <td data-label="Actions" class="actions-cell">
                                 <button class="btn btn-sm green-button" @onclick="() => EditRound(round.Id)">Edit</button>
+                                <button class="btn btn-sm light-cyan-button me-2" @onclick="() => EnterResults(round.Id)">Enter Results</button>
+
                             </td>
                         </tr>
                     }
@@ -80,4 +81,5 @@
     private void AddRound() { NavigationManager.NavigateTo($"/admin/seasons/{SeasonId}/create-round"); }
     private void EditRound(int roundId) => NavigationManager.NavigateTo($"/admin/rounds/edit/{roundId}");
     private void Back() => NavigationManager.NavigateTo($"/admin/seasons/edit/{SeasonId}");
+    private void EnterResults(int roundId) => NavigationManager.NavigateTo($"/admin/rounds/{roundId}/results");
 }
