--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/Create.razor
@@ -5,7 +5,6 @@
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 
-@using Microsoft.AspNetCore.Authorization
 @using PredictionLeague.Shared.Admin.Seasons
 
 <PageTitle>Create Season</PageTitle>
@@ -89,7 +88,7 @@
         if (response.IsSuccessStatusCode)
         {
             _successMessage = "Season created successfully!";
-            _model = new()
+            _model = new CreateSeasonRequest
             {
                 StartDate = DateTime.Today,
                 EndDate = DateTime.Today.AddMonths(9)
