Fixed ReSharper Issues

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Rounds/EnterResults.razor
@@ -36,7 +36,7 @@
                         <div class="prediction-card">
                             <div class="prediction-card-body">
                                 <div class="team-display">
-                                    <img src="@match.HomeTeamLogoUrl" class="match-logo" />
+                                    <img src="@match.HomeTeamLogoUrl" class="match-logo" alt="Home Team Logo" />
                                     <span class="team-name">@match.HomeTeamName</span>
                                 </div>
                                 <div class="score-input-group">
@@ -45,7 +45,7 @@
                                     <InputNumber class="form-control score-input" @bind-Value="match.ActualAwayScore" />
                                 </div>
                                 <div class="team-display">
-                                    <img src="@match.AwayTeamLogoUrl" class="match-logo" />
+                                    <img src="@match.AwayTeamLogoUrl" class="match-logo" alt="Away Team Logo" />
                                     <span class="team-name">@match.AwayTeamName</span>
                                 </div>
                             </div>
