League Member Pages Working

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Layout/NavLayout.razor
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="">
-            <img src="https://play-lh.googleusercontent.com/pJPgV--7ICYdqOyd6_8pgVXx9jIa81_YNLKI532jiGa9xBMZJarKRzgj76oYXUO7zK8" alt="Prediction League Logo" class="navbar-logo" />
+            <img src="/images/logo.png" alt="Prediction League Logo" class="navbar-logo" />
             Prediction League
         </a>
 
@@ -69,7 +69,7 @@
 
                             @if (_isAdminMenuOpen)
                             {
-                                <li class="nav-item"><NavLink class="dropdown-item" href="/admin/leagues">Manage Leagues</NavLink></li>
+                                <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/leagues">Manage Leagues</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/seasons">Manage Seasons</NavLink></li>
                                 <li class="nav-item"><NavLink class="nav-link mobile-nav-sub-item" href="/admin/teams">Manage Teams</NavLink></li>
                             }
