--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Leagues/Edit.razor
@@ -1,4 +1,4 @@
-﻿@page "/admin/leagues/edit/{LeagueId:int}"
+﻿@page "/admin/leagues/{LeagueId:int}/edit"
 
 @attribute [Authorize(Roles = "Administrator")]
 
