--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/List.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Admin/Seasons/List.razor
@@ -38,7 +38,7 @@
                     @foreach (var season in _seasons)
                     {
                         <tr>
-                            <td data-label="Name" class="season-name-cell">@season.Name</td>
+                            <td data-label="Name" class="header-cell">@season.Name</td>
                             <td data-label="Start Date">@season.StartDate.ToShortDateString()</td>
                             <td data-label="End Date">@season.EndDate.ToShortDateString()</td>
                             <td data-label="Rounds" class="actions-cell">
