--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Auth/Register.razor
@@ -104,7 +104,7 @@
         {
             _successMessage = "Registration successful! You will be redirected to the login page shortly.";
             await Task.Delay(2000);
-            NavigationManager.NavigateTo("/login");
+            NavigationManager.NavigateTo("/auth/login");
         }
         else
         {
