--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Predictions/Predictions.razor
@@ -43,7 +43,7 @@
                             <div class="prediction-card-body">
                                 <div class="team-display">
                                     <img src="@match.HomeTeamLogoUrl" class="match-logo" alt="Home Team Logo" />
-                                    <span class="team-name">@match.HomeTeamName</span>
+                                    <span class="team-name d-none d-sm-block">@match.HomeTeamName</span>
                                 </div>
                                 <div class="score-input-group">
                                     <div class="score-input-stepper">
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="team-display">
                                     <img src="@match.AwayTeamLogoUrl" class="match-logo" alt="Away Team Logo" />
-                                    <span class="team-name">@match.AwayTeamName</span>
+                                    <span class="team-name d-none d-sm-block">@match.AwayTeamName</span>
                                 </div>
                             </div>
                         </div>
