--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/tables.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/tables.css
@@ -31,7 +31,7 @@
 
         .responsive-table td {
             text-align: right;
-            padding-left: 50%;
+            padding-left: 35%;
             position: relative;
             border: none;
             padding-top: 0.75rem;
@@ -42,7 +42,7 @@
                 content: attr(data-label);
                 position: absolute;
                 left: 0;
-                width: 50%;
+                width: 35%;
                 padding-left: 1rem;
                 font-weight: bold;
                 text-align: left;
@@ -50,12 +50,12 @@
             }
 
             /* Hide the "Name" label specifically */
-            .responsive-table td.season-name-cell::before {
+            .responsive-table td.header-cell::before {
                 display: none;
             }
 
             /* Style the Name as a header */
-            .responsive-table td.season-name-cell {
+            .responsive-table td.header-cell {
                 background-color: var(--pl-purple);
                 text-align: center;
                 font-size: 1.2rem;
